fix: remove console log for isServicesActive and update z-index for header menu

--- a/client/src/components/global/HeaderMenu/HeaderMenu.module.scss
+++ b/client/src/components/global/HeaderMenu/HeaderMenu.module.scss
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 4;
+  z-index: 10;
   background-color: $color-secondary;
   transition: $transition;
 
